# llm-testing

./: .gitignore  README.md  config.py  config.yaml  config.yaml.example  example_prompts.txt  lmstudio_model.py  main.py  mistral_model.py  ollama_interface.py  ollama_model.py  pyproject.toml  test_connection.py
outputs/: comparison_20251010_115054.md  comparison_20251010_142853.md  comparison_20251107_094546.md  consistency_llama3.1_8b_20251022_111434.csv  consistency_llama3.1_8b_20251022_111434.md  consistency_mistral_7b_20251022_110308.csv  consistency_mistral_7b_20251022_110308.md  consistency_mistral_7b_20251022_111019.csv  consistency_mistral_7b_20251022_111019.md  consistency_mistral_7b_20251022_112443.csv  consistency_mistral_7b_20251022_112443.md  consistency_mistral_7b_20251022_113227.csv  consistency_mistral_7b_20251022_113227.md  consistency_mistral_7b_20251107_093108.csv  consistency_mistral_7b_20251107_093108.md  mistral-local_responses.txt  model_1_mistral_7b_20251010_115054.md  model_1_mistral_7b_20251010_142853.md  model_1_mistral_7b_20251107_094546.md  model_2_llama3.1_8b_20251010_115054.md  model_2_llama3.1_8b_20251010_142853.md  model_2_llama3.1_8b_20251107_094546.md  model_3_codellama_7b_20251010_115054.md  model_3_codellama_7b_20251010_142853.md  model_3_codellama_7b_20251107_094546.md
src/: __init__.py  config.py  main.py
src/code/: example.txt
src/interfaces/: __init__.py  base.py  ollama.py
tests/: __init__.py  test_connection.py
